# telegram_bot

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: claude-code-review.yml  claude.yml
deployment/: README.md  deploy.sh  destroy.sh
deployment/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/plan/: stock-information-roadmap.md
src/: ai.rs  commands.rs  deployment.rs  handlers.rs  main.rs  storage.rs
src/stock/: alpha_vantage.rs  database.rs  dynamodb.rs  mod.rs  provider.rs  service.rs
