[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.16.0", features = ["macros", "webhooks", "rustls"], default-features = false }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
# Web server dependencies - conditional based on deployment target
axum = { version = "0.7", optional = true }
# AWS Lambda dependencies
lambda_runtime = { version = "0.8", optional = true }
serde_json = "1.0"
# AI and utility dependencies
async-openai = { version = "0.28", default-features = false, features = ["rustls"] }
async-trait = "0.1"
# DynamoDB dependencies
aws-config = "1.0"
aws-sdk-dynamodb = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["axum-server"]
axum-server = ["axum"]
lambda = ["lambda_runtime"]
